--- a/src/i18n/locales/nl.json
+++ b/src/i18n/locales/nl.json
@@ -92,6 +92,27 @@
     "totalFields": "Totaal Velden",
     "lastUpdated": "Laatst Bijgewerkt"
   },
+  "speech": {
+    "startListening": "Start spraakinvoer",
+    "stopListening": "Stop luisteren",
+    "listening": "Luisteren...",
+    "confidence": "Betrouwbaarheid",
+    "unsupported": "Spraakherkenning wordt niet ondersteund in deze browser",
+    "dismissError": "Fout negeren",
+    "errors": {
+      "notAllowed": "Microfoon toegang geweigerd. Sta microfoon toegang toe en probeer opnieuw.",
+      "notFound": "Geen microfoon gevonden. Controleer uw microfoon verbinding.",
+      "network": "Netwerkfout opgetreden tijdens spraakherkenning.",
+      "aborted": "Spraakherkenning werd afgebroken.",
+      "audioCapture": "Audio opname gefaald. Controleer uw microfoon.",
+      "notAllowedTimeout": "Microfoon toestemming timeout. Probeer opnieuw.",
+      "serviceNotAllowed": "Spraakherkenning service niet toegestaan.",
+      "badGrammar": "Spraakherkenning grammatica fout.",
+      "languageNotSupported": "Taal niet ondersteund voor spraakherkenning.",
+      "noSpeech": "Geen spraak gedetecteerd. Probeer opnieuw.",
+      "unknown": "Een onbekende fout is opgetreden tijdens spraakherkenning."
+    }
+  },
   "systemPrompts": {
     "aiAssistant": "Je bent een intelligente assistent die gebruikers helpt bij het interacteren met MCP (Model Context Protocol) tools.",
     "structuredFormat": "KRITIEK: Je MOET reageren in dit EXACTE gestructureerde format:",
