feat: Enhance Chat component with app title and subtitle; update localization for multiple languages; improve export section styling

--- a/src/i18n/locales/fr.json
+++ b/src/i18n/locales/fr.json
@@ -1,6 +1,9 @@
 {
   "app": {
-    "title": "Client MCP",
+    "title": "SmartQuery",
+    "subtitle": "Intelligence de Données IA",
+    "alternativeTitle": "DataChat Pro",
+    "alternativeSubtitle": "Conversations de Données Professionnelles",
     "loading": "Traitement en cours...",
     "send": "Envoyer",
     "processing": "Traitement...",
