--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -1,6 +1,9 @@
 {
   "app": {
-    "title": "MCP Client",
+    "title": "SmartQuery",
+    "subtitle": "AI-Powered Data Intelligence",
+    "alternativeTitle": "DataChat Pro",
+    "alternativeSubtitle": "Professional Data Conversations",
     "loading": "Processing...",
     "send": "Send",
     "processing": "Processing...",
